# bear

./: .gitignore  Cargo.toml  LICENSE  PublicServerContract.md  README.md  install.sh
.github/workflows/: ci.yml
bear/: Cargo.toml
bear-core/: Cargo.toml
bear-core/src/: config.rs  lib.rs  llm.rs  prompts.rs  tools.rs  workspace.rs
bear-relay/: Dockerfile  README.md  db.js  docker-compose.yml  relay.js
bear-server/: Cargo.toml
bear-server/src/: llm.rs  lsp.rs  main.rs  process.rs  relay.rs  rtc.rs  state.rs  tls_pin.rs  tool_bridge.rs  tools.rs  ws.rs
bear-turn/: Dockerfile  README.md  docker-compose.yml  turn.toml  turnserver.conf
bear-wasm/: Cargo.toml
bear-wasm/src/: lib.rs
bear/src/: main.rs  menu.rs  server.rs  setup.rs  term.rs
bearjs/: bear.css  bear.js
html/: index.html
web/: README.md  app.js  index.html  style.css
