[workspace]
members = [
  "bear-core",
  "bear-server",
  "bear",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
dirs = "5"
futures = "0.3"
glob = "0.3"
libc = "0.2"
fs2 = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "io-std", "io-util", "process", "fs"] }
tokio-tungstenite = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
urlencoding = "2"
webrtc = "0.17"
lsp-types = "0.97"
