[package]
name = "bear-core"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
boa_engine = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
html-to-markdown-rs = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
