[package]
name = "bear-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

libc = { workspace = true }

webrtc = { workspace = true }

bear-core = { path = "../bear-core" }
