[package]
name = "bear-server"
version = "0.3.6"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

libc = { workspace = true }

webrtc = { workspace = true }

urlencoding = { workspace = true }

lsp-types = { workspace = true }

rsa = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
pkcs8 = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }

bear-core = { path = "../bear-core" }
