[package]
name = "bear-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

bear-core = { path = "../bear-core" }
