[package]
name = "bear"
version = "0.3.3"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }

bear-core = { path = "../bear-core" }
